# basic-ai-assistant

./: .dockerignore  Dockerfile  Makefile  README.md  example.env  main.py  pyproject.toml
.cursor/rules/: conventions.mdc  workflow.mdc
bot/: config.py  handlers.py  llm.py
docs/: idea.md  tasklist.md  vision.md
