[project]
name = "basic-ai-assistant"
version = "0.1.0"
description = "Базовый ИИ ассистент в Telegram"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]
